--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,8 @@
         android:theme="@style/Theme.Flixster" >
         <activity
             android:name=".MainActivity"
+
+            android:screenOrientation="sensor"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
