--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,14 @@ dependencies{
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'org.chromium.net:cronet-embedded:76.3809.111'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation files('libs\\YouTubeAndroidPlayerApi.jar')
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
   // Glide v4 uses this new annotation processor -- see https://bumptech.github.io/glide/doc/generatedapi.html
 }
